grampar/src/grampar/antlr_drivers/smtp/driver/SMTPParser.py
# Generated from SMTPParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SMTPParser ( Parser ):

    grammarFileName = "SMTPParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'HELO'", "'EHLO'", "'MAIL FROM'", "'RCPT TO'", 
                     "'DATA'", "'RSET'", "'VRFY'", "'NOOP'", "'QUIT'", "':'", 
                     "'<'", "'>'", "'.'", "','", "'@'", "'\"'", "'\\'", 
                     "'-'", "'\\r\\n'", "'\\n'", "'\\r'", "' '" ]

    symbolicNames = [ "<INVALID>", "HELO", "EHLO", "MAIL", "RCPT", "DATA", 
                      "RSET", "VRFY", "NOOP", "QUIT", "COLON", "LANGLE", 
                      "RANGLE", "PERIOD", "COMMA", "AT", "DQUOTE", "BACKSLASH", 
                      "DASH", "CRLF", "LF", "CR", "SP", "ALPHA", "DIGIT", 
                      "ATEXT_PUN", "QTEXT" ]

    RULE_session = 0
    RULE_command = 1
    RULE_helo = 2
    RULE_ehlo = 3
    RULE_mailFrom = 4
    RULE_rcptTo = 5
    RULE_dataCmd = 6
    RULE_quit = 7
    RULE_reversePath = 8
    RULE_forwardPath = 9
    RULE_path = 10
    RULE_adl = 11
    RULE_atDomain = 12
    RULE_mailbox = 13
    RULE_dataBody = 14
    RULE_dataLine = 15
    RULE_domain = 16
    RULE_subDomain = 17
    RULE_localPart = 18
    RULE_dotString = 19
    RULE_atom = 20
    RULE_quotedString = 21
    RULE_qtext = 22
    RULE_quotedPair = 23

    ruleNames =  [ "session", "command", "helo", "ehlo", "mailFrom", "rcptTo", 
                   "dataCmd", "quit", "reversePath", "forwardPath", "path", 
                   "adl", "atDomain", "mailbox", "dataBody", "dataLine", 
                   "domain", "subDomain", "localPart", "dotString", "atom", 
                   "quotedString", "qtext", "quotedPair" ]

    EOF = Token.EOF
    HELO=1
    EHLO=2
    MAIL=3
    RCPT=4
    DATA=5
    RSET=6
    VRFY=7
    NOOP=8
    QUIT=9
    COLON=10
    LANGLE=11
    RANGLE=12
    PERIOD=13
    COMMA=14
    AT=15
    DQUOTE=16
    BACKSLASH=17
    DASH=18
    CRLF=19
    LF=20
    CR=21
    SP=22
    ALPHA=23
    DIGIT=24
    ATEXT_PUN=25
    QTEXT=26

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SessionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SMTPParser.CommandContext)
            else:
                return self.getTypedRuleContext(SMTPParser.CommandContext,i)


        def getRuleIndex(self):
            return SMTPParser.RULE_session

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSession" ):
                listener.enterSession(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSession" ):
                listener.exitSession(self)




    def session(self):

        localctx = SMTPParser.SessionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_session)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 48
                self.command()
                self.state = 51 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 574) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def helo(self):
            return self.getTypedRuleContext(SMTPParser.HeloContext,0)


        def ehlo(self):
            return self.getTypedRuleContext(SMTPParser.EhloContext,0)


        def mailFrom(self):
            return self.getTypedRuleContext(SMTPParser.MailFromContext,0)


        def rcptTo(self):
            return self.getTypedRuleContext(SMTPParser.RcptToContext,0)


        def dataCmd(self):
            return self.getTypedRuleContext(SMTPParser.DataCmdContext,0)


        def quit(self):
            return self.getTypedRuleContext(SMTPParser.QuitContext,0)


        def getRuleIndex(self):
            return SMTPParser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)




    def command(self):

        localctx = SMTPParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_command)
        try:
            self.state = 61
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 55
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1]:
                    self.state = 53
                    self.helo()
                    pass
                elif token in [2]:
                    self.state = 54
                    self.ehlo()
                    pass
                else:
                    raise NoViableAltException(self)

                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 57
                self.mailFrom()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 3)
                self.state = 58
                self.rcptTo()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 4)
                self.state = 59
                self.dataCmd()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 5)
                self.state = 60
                self.quit()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HeloContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HELO(self):
            return self.getToken(SMTPParser.HELO, 0)

        def SP(self):
            return self.getToken(SMTPParser.SP, 0)

        def domain(self):
            return self.getTypedRuleContext(SMTPParser.DomainContext,0)


        def CRLF(self):
            return self.getToken(SMTPParser.CRLF, 0)

        def getRuleIndex(self):
            return SMTPParser.RULE_helo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHelo" ):
                listener.enterHelo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHelo" ):
                listener.exitHelo(self)




    def helo(self):

        localctx = SMTPParser.HeloContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_helo)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(SMTPParser.HELO)
            self.state = 64
            self.match(SMTPParser.SP)
            self.state = 65
            self.domain()
            self.state = 66
            self.match(SMTPParser.CRLF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EhloContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EHLO(self):
            return self.getToken(SMTPParser.EHLO, 0)

        def SP(self):
            return self.getToken(SMTPParser.SP, 0)

        def domain(self):
            return self.getTypedRuleContext(SMTPParser.DomainContext,0)


        def CRLF(self):
            return self.getToken(SMTPParser.CRLF, 0)

        def getRuleIndex(self):
            return SMTPParser.RULE_ehlo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEhlo" ):
                listener.enterEhlo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEhlo" ):
                listener.exitEhlo(self)




    def ehlo(self):

        localctx = SMTPParser.EhloContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_ehlo)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(SMTPParser.EHLO)
            self.state = 69
            self.match(SMTPParser.SP)
            self.state = 70
            self.domain()
            self.state = 71
            self.match(SMTPParser.CRLF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MailFromContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MAIL(self):
            return self.getToken(SMTPParser.MAIL, 0)

        def COLON(self):
            return self.getToken(SMTPParser.COLON, 0)

        def reversePath(self):
            return self.getTypedRuleContext(SMTPParser.ReversePathContext,0)


        def CRLF(self):
            return self.getToken(SMTPParser.CRLF, 0)

        def getRuleIndex(self):
            return SMTPParser.RULE_mailFrom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMailFrom" ):
                listener.enterMailFrom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMailFrom" ):
                listener.exitMailFrom(self)




    def mailFrom(self):

        localctx = SMTPParser.MailFromContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_mailFrom)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(SMTPParser.MAIL)
            self.state = 74
            self.match(SMTPParser.COLON)
            self.state = 75
            self.reversePath()
            self.state = 76
            self.match(SMTPParser.CRLF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RcptToContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RCPT(self):
            return self.getToken(SMTPParser.RCPT, 0)

        def COLON(self):
            return self.getToken(SMTPParser.COLON, 0)

        def forwardPath(self):
            return self.getTypedRuleContext(SMTPParser.ForwardPathContext,0)


        def CRLF(self):
            return self.getToken(SMTPParser.CRLF, 0)

        def getRuleIndex(self):
            return SMTPParser.RULE_rcptTo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRcptTo" ):
                listener.enterRcptTo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRcptTo" ):
                listener.exitRcptTo(self)




    def rcptTo(self):

        localctx = SMTPParser.RcptToContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_rcptTo)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(SMTPParser.RCPT)
            self.state = 79
            self.match(SMTPParser.COLON)
            self.state = 80
            self.forwardPath()
            self.state = 81
            self.match(SMTPParser.CRLF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DataCmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DATA(self):
            return self.getToken(SMTPParser.DATA, 0)

        def CRLF(self, i:int=None):
            if i is None:
                return self.getTokens(SMTPParser.CRLF)
            else:
                return self.getToken(SMTPParser.CRLF, i)

        def dataBody(self):
            return self.getTypedRuleContext(SMTPParser.DataBodyContext,0)


        def PERIOD(self):
            return self.getToken(SMTPParser.PERIOD, 0)

        def getRuleIndex(self):
            return SMTPParser.RULE_dataCmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDataCmd" ):
                listener.enterDataCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDataCmd" ):
                listener.exitDataCmd(self)




    def dataCmd(self):

        localctx = SMTPParser.DataCmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_dataCmd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(SMTPParser.DATA)
            self.state = 84
            self.match(SMTPParser.CRLF)
            self.state = 85
            self.dataBody()
            self.state = 86
            self.match(SMTPParser.PERIOD)
            self.state = 87
            self.match(SMTPParser.CRLF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QuitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QUIT(self):
            return self.getToken(SMTPParser.QUIT, 0)

        def CRLF(self):
            return self.getToken(SMTPParser.CRLF, 0)

        def getRuleIndex(self):
            return SMTPParser.RULE_quit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuit" ):
                listener.enterQuit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuit" ):
                listener.exitQuit(self)




    def quit(self):

        localctx = SMTPParser.QuitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_quit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(SMTPParser.QUIT)
            self.state = 90
            self.match(SMTPParser.CRLF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReversePathContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LANGLE(self):
            return self.getToken(SMTPParser.LANGLE, 0)

        def RANGLE(self):
            return self.getToken(SMTPParser.RANGLE, 0)

        def path(self):
            return self.getTypedRuleContext(SMTPParser.PathContext,0)


        def getRuleIndex(self):
            return SMTPParser.RULE_reversePath

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReversePath" ):
                listener.enterReversePath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReversePath" ):
                listener.exitReversePath(self)




    def reversePath(self):

        localctx = SMTPParser.ReversePathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_reversePath)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(SMTPParser.LANGLE)
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 59081728) != 0):
                self.state = 93
                self.path()


            self.state = 96
            self.match(SMTPParser.RANGLE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForwardPathContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LANGLE(self):
            return self.getToken(SMTPParser.LANGLE, 0)

        def path(self):
            return self.getTypedRuleContext(SMTPParser.PathContext,0)


        def RANGLE(self):
            return self.getToken(SMTPParser.RANGLE, 0)

        def getRuleIndex(self):
            return SMTPParser.RULE_forwardPath

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForwardPath" ):
                listener.enterForwardPath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForwardPath" ):
                listener.exitForwardPath(self)




    def forwardPath(self):

        localctx = SMTPParser.ForwardPathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_forwardPath)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(SMTPParser.LANGLE)
            self.state = 99
            self.path()
            self.state = 100
            self.match(SMTPParser.RANGLE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PathContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mailbox(self):
            return self.getTypedRuleContext(SMTPParser.MailboxContext,0)


        def adl(self):
            return self.getTypedRuleContext(SMTPParser.AdlContext,0)


        def COLON(self):
            return self.getToken(SMTPParser.COLON, 0)

        def getRuleIndex(self):
            return SMTPParser.RULE_path

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPath" ):
                listener.enterPath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPath" ):
                listener.exitPath(self)




    def path(self):

        localctx = SMTPParser.PathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_path)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==15:
                self.state = 102
                self.adl()


            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 105
                self.match(SMTPParser.COLON)


            self.state = 108
            self.mailbox()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AdlContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atDomain(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SMTPParser.AtDomainContext)
            else:
                return self.getTypedRuleContext(SMTPParser.AtDomainContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SMTPParser.COMMA)
            else:
                return self.getToken(SMTPParser.COMMA, i)

        def getRuleIndex(self):
            return SMTPParser.RULE_adl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdl" ):
                listener.enterAdl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdl" ):
                listener.exitAdl(self)




    def adl(self):

        localctx = SMTPParser.AdlContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_adl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.atDomain()
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 111
                self.match(SMTPParser.COMMA)
                self.state = 112
                self.atDomain()
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtDomainContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AT(self):
            return self.getToken(SMTPParser.AT, 0)

        def domain(self):
            return self.getTypedRuleContext(SMTPParser.DomainContext,0)


        def getRuleIndex(self):
            return SMTPParser.RULE_atDomain

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtDomain" ):
                listener.enterAtDomain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtDomain" ):
                listener.exitAtDomain(self)




    def atDomain(self):

        localctx = SMTPParser.AtDomainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_atDomain)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(SMTPParser.AT)
            self.state = 119
            self.domain()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MailboxContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def localPart(self):
            return self.getTypedRuleContext(SMTPParser.LocalPartContext,0)


        def AT(self):
            return self.getToken(SMTPParser.AT, 0)

        def domain(self):
            return self.getTypedRuleContext(SMTPParser.DomainContext,0)


        def getRuleIndex(self):
            return SMTPParser.RULE_mailbox

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMailbox" ):
                listener.enterMailbox(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMailbox" ):
                listener.exitMailbox(self)




    def mailbox(self):

        localctx = SMTPParser.MailboxContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_mailbox)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.localPart()
            self.state = 122
            self.match(SMTPParser.AT)
            self.state = 123
            self.domain()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DataBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dataLine(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SMTPParser.DataLineContext)
            else:
                return self.getTypedRuleContext(SMTPParser.DataLineContext,i)


        def CRLF(self, i:int=None):
            if i is None:
                return self.getTokens(SMTPParser.CRLF)
            else:
                return self.getToken(SMTPParser.CRLF, i)

        def getRuleIndex(self):
            return SMTPParser.RULE_dataBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDataBody" ):
                listener.enterDataBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDataBody" ):
                listener.exitDataBody(self)




    def dataBody(self):

        localctx = SMTPParser.DataBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_dataBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 134209534) != 0):
                self.state = 125
                self.dataLine()
                self.state = 126
                self.match(SMTPParser.CRLF)
                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DataLineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PERIOD(self, i:int=None):
            if i is None:
                return self.getTokens(SMTPParser.PERIOD)
            else:
                return self.getToken(SMTPParser.PERIOD, i)

        def getRuleIndex(self):
            return SMTPParser.RULE_dataLine

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDataLine" ):
                listener.enterDataLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDataLine" ):
                listener.exitDataLine(self)




    def dataLine(self):

        localctx = SMTPParser.DataLineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_dataLine)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 133
                    _la = self._input.LA(1)
                    if _la <= 0 or _la==13:
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()

                else:
                    raise NoViableAltException(self)
                self.state = 136 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DomainContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subDomain(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SMTPParser.SubDomainContext)
            else:
                return self.getTypedRuleContext(SMTPParser.SubDomainContext,i)


        def PERIOD(self, i:int=None):
            if i is None:
                return self.getTokens(SMTPParser.PERIOD)
            else:
                return self.getToken(SMTPParser.PERIOD, i)

        def getRuleIndex(self):
            return SMTPParser.RULE_domain

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDomain" ):
                listener.enterDomain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDomain" ):
                listener.exitDomain(self)




    def domain(self):

        localctx = SMTPParser.DomainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_domain)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.subDomain()
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==13:
                self.state = 139
                self.match(SMTPParser.PERIOD)
                self.state = 140
                self.subDomain()
                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubDomainContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ALPHA(self, i:int=None):
            if i is None:
                return self.getTokens(SMTPParser.ALPHA)
            else:
                return self.getToken(SMTPParser.ALPHA, i)

        def DIGIT(self, i:int=None):
            if i is None:
                return self.getTokens(SMTPParser.DIGIT)
            else:
                return self.getToken(SMTPParser.DIGIT, i)

        def DASH(self, i:int=None):
            if i is None:
                return self.getTokens(SMTPParser.DASH)
            else:
                return self.getToken(SMTPParser.DASH, i)

        def getRuleIndex(self):
            return SMTPParser.RULE_subDomain

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubDomain" ):
                listener.enterSubDomain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubDomain" ):
                listener.exitSubDomain(self)




    def subDomain(self):

        localctx = SMTPParser.SubDomainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_subDomain)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(SMTPParser.ALPHA)
            self.state = 150
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 147
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 25427968) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume() 
                self.state = 152
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LocalPartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dotString(self):
            return self.getTypedRuleContext(SMTPParser.DotStringContext,0)


        def quotedString(self):
            return self.getTypedRuleContext(SMTPParser.QuotedStringContext,0)


        def getRuleIndex(self):
            return SMTPParser.RULE_localPart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLocalPart" ):
                listener.enterLocalPart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLocalPart" ):
                listener.exitLocalPart(self)




    def localPart(self):
